For Chrome browsers, specify font-smoothing to ensure font-weight parameter is distinct from normal text. Especially visible in the Tool Form pages (Tools) where <P>aragraph and <Strong> tags are widely used.

--- a/client/src/style/scss/base.scss
+++ b/client/src/style/scss/base.scss
@@ -1,3 +1,5 @@
+* {-webkit-font-smoothing: antialiased;}
+
 // Bootstrap variables and core framework
 @import "~bootstrap/scss/_functions.scss";
 @import "theme/blue.scss";
